cmake_minimum_required(VERSION 3.18)
project(rocmerge_gpu_quant CXX HIP)

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Find ROCm
find_package(hip REQUIRED)

# Common library (shared by all quantization kernels)
add_library(quant_common STATIC
    common.hip
)

# Set target properties
set_target_properties(quant_common PROPERTIES
    CXX_STANDARD 17
    POSITION_INDEPENDENT_CODE ON
)

# Q4_K quantization kernel
add_library(q4_k_quantize STATIC
    q4_k_quantize.hip
)

# Link common library to Q4_K kernel
target_link_libraries(q4_k_quantize
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q4_k_quantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_K dequantization kernel
add_library(q4_k_dequantize STATIC
    q4_k_dequantize.hip
)

# Link common library to Q4_K dequantize kernel
target_link_libraries(q4_k_dequantize
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q4_k_dequantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_K verification kernel
add_library(q4_k_verify STATIC
    q4_k_verify.hip
)

# Link common library to Q4_K verify kernel
target_link_libraries(q4_k_verify
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q4_k_verify PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q8_0 quantization kernel
add_library(q8_0_quantize STATIC
    q8_0_quantize.hip
)

# Link common library to Q8_0 kernel
target_link_libraries(q8_0_quantize
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q8_0_quantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q8_0 dequantization kernel
add_library(q8_0_dequantize STATIC
    q8_0_dequantize.hip
)

# Link common library to Q8_0 dequantize kernel
target_link_libraries(q8_0_dequantize
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q8_0_dequantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q8_0 verification kernel
add_library(q8_0_verify STATIC
    q8_0_verify.hip
)

# Link common library to Q8_0 verify kernel
target_link_libraries(q8_0_verify
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q8_0_verify PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q8_0 GEMV kernel (Q8_0 × f32 matrix-vector multiplication)
add_library(q8_0_gemv STATIC
    q8_0_gemv.hip
)

# Link common library to Q8_0 GEMV kernel
target_link_libraries(q8_0_gemv
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q8_0_gemv PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_0 quantization kernel
add_library(q4_0_quantize STATIC q4_0_quantize.hip)
target_link_libraries(q4_0_quantize quant_common)
set_target_properties(q4_0_quantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_0 dequantization kernel
add_library(q4_0_dequantize STATIC q4_0_dequantize.hip)
target_link_libraries(q4_0_dequantize quant_common)
set_target_properties(q4_0_dequantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_0 → FP16 dequantization + FP32↔FP16 conversion for the hipBLAS prefill path
add_library(dequant_q4_0_to_f16 STATIC dequant_q4_0_to_f16.hip)
target_link_libraries(dequant_q4_0_to_f16 quant_common)
set_target_properties(dequant_q4_0_to_f16 PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Phase 2a — WMMA proof-of-concept kernel. Lives outside hip_kernels/quant
# but is built as part of the same CMake invocation for convenience.
add_library(wmma_gemm_16x16 STATIC ../wmma/wmma_gemm_16x16.hip)
set_target_properties(wmma_gemm_16x16 PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    POSITION_INDEPENDENT_CODE ON
)

# Phase 2a Step 2 — Tiled 64×64 WMMA GEMM.
add_library(wmma_gemm_tiled STATIC ../wmma/wmma_gemm_tiled.hip)
set_target_properties(wmma_gemm_tiled PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    POSITION_INDEPENDENT_CODE ON
)

# Phase 2b — WMMA GEMM with inline Q4_0 weight dequant.
add_library(wmma_gemm_q4_0 STATIC ../wmma/wmma_gemm_q4_0.hip)
set_target_properties(wmma_gemm_q4_0 PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    POSITION_INDEPENDENT_CODE ON
)

# Q4_1 quantization kernel
add_library(q4_1_quantize STATIC q4_1_quantize.hip)
target_link_libraries(q4_1_quantize quant_common)
set_target_properties(q4_1_quantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_1 dequantization kernel
add_library(q4_1_dequantize STATIC q4_1_dequantize.hip)
target_link_libraries(q4_1_dequantize quant_common)
set_target_properties(q4_1_dequantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_0 verification kernel
add_library(q4_0_verify STATIC q4_0_verify.hip)
target_link_libraries(q4_0_verify quant_common)
set_target_properties(q4_0_verify PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_1 verification kernel
add_library(q4_1_verify STATIC q4_1_verify.hip)
target_link_libraries(q4_1_verify quant_common)
set_target_properties(q4_1_verify PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_0 GEMV kernel (Q4_0 × f32 matrix-vector multiplication)
add_library(q4_0_gemv STATIC
    q4_0_gemv.hip
)

# Link common library to Q4_0 GEMV kernel
target_link_libraries(q4_0_gemv
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q4_0_gemv PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_0 Batched GEMV kernel (single weight load, N dot products for spec decode verify)
add_library(q4_0_gemv_batched STATIC
    q4_0_gemv_batched.hip
)
target_link_libraries(q4_0_gemv_batched quant_common)
set_target_properties(q4_0_gemv_batched PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_0 Tiled Batched GEMV kernel (for large in_dim that exceeds LDS limit)
add_library(q4_0_gemv_batched_tiled STATIC
    q4_0_gemv_batched_tiled.hip
)
target_link_libraries(q4_0_gemv_batched_tiled quant_common)
set_target_properties(q4_0_gemv_batched_tiled PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_1 GEMV kernel (Q4_1 × f32 matrix-vector multiplication)
add_library(q4_1_gemv STATIC
    q4_1_gemv.hip
)

# Link common library to Q4_1 GEMV kernel
target_link_libraries(q4_1_gemv
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q4_1_gemv PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Experimental FFN microkernel (kept separate from production dispatch)
add_library(q4_1_ffn_experimental STATIC
    q4_1_ffn_experimental.hip
)

target_link_libraries(q4_1_ffn_experimental
    quant_common
)

set_target_properties(q4_1_ffn_experimental PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Vulkan-style FFN microkernel (interleaved, vectorized)
add_library(q4_0_vulkan_style STATIC
    q4_0_vulkan_style.hip
)

target_link_libraries(q4_0_vulkan_style
    quant_common
)

set_target_properties(q4_0_vulkan_style PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Vulkan-style GEMV (Multi-row reuse)
add_library(q4_0_gemv_vulkan_style STATIC
    q4_0_gemv_vulkan_style.hip
)

target_link_libraries(q4_0_gemv_vulkan_style
    quant_common
)

set_target_properties(q4_0_gemv_vulkan_style PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Vulkan-style Q4_K GEMV
add_library(q4_k_gemv_vulkan_style STATIC
    q4_k_gemv_vulkan_style.hip
)

target_link_libraries(q4_k_gemv_vulkan_style
    quant_common
)

set_target_properties(q4_k_gemv_vulkan_style PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# GEMM Kernels (Batched)
add_library(q4_0_gemm STATIC q4_0_gemm.hip)
target_link_libraries(q4_0_gemm quant_common)
set_target_properties(q4_0_gemm PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

add_library(q4_0_fused STATIC
    q4_0_fused.hip
    q4_0_fused_q8.hip
    q4_0_fused_qkv_rope.hip
    q4_0_fused_norm_qkv_rope.hip
    q4_0_fused_norm_gate_up.hip
)

target_link_libraries(q4_0_fused quant_common)
set_target_properties(q4_0_fused PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

add_library(q4_1_gemm STATIC q4_1_gemm.hip)
target_link_libraries(q4_1_gemm quant_common)
set_target_properties(q4_1_gemm PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

add_library(q8_0_gemm STATIC q8_0_gemm.hip)
target_link_libraries(q8_0_gemm quant_common)
set_target_properties(q8_0_gemm PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

add_library(q4_k_gemm STATIC q4_k_gemm.hip)
target_link_libraries(q4_k_gemm quant_common)
set_target_properties(q4_k_gemm PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

add_library(q5_k_gemm STATIC q5_k_gemm.hip)
target_link_libraries(q5_k_gemm quant_common)
set_target_properties(q5_k_gemm PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

# Test kernel library (for Phase 1 verification)
add_library(test_quant STATIC
    test_kernel.hip
)

# Link common library to test kernel
target_link_libraries(test_quant
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(test_quant PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q4_K GEMV kernel (Q4_K × f32 matrix-vector multiplication)
add_library(q4_k_gemv STATIC
    q4_k_gemv.hip
)

# Link common library to Q4_K GEMV kernel
target_link_libraries(q4_k_gemv
    quant_common
)

# Set output directory to match Cargo expectations
set_target_properties(q4_k_gemv PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q5_K quantization kernel
add_library(q5_k_quantize STATIC
    q5_k_quantize.hip
)

target_link_libraries(q5_k_quantize
    quant_common
)

set_target_properties(q5_k_quantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q5_K dequantization kernel
add_library(q5_k_dequantize STATIC
    q5_k_dequantize.hip
)

target_link_libraries(q5_k_dequantize
    quant_common
)

set_target_properties(q5_k_dequantize PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q5_K verification kernel
add_library(q5_k_verify STATIC
    q5_k_verify.hip
)

target_link_libraries(q5_k_verify
    quant_common
)

set_target_properties(q5_k_verify PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Q5_K GEMV kernel (Q5_K × f32 matrix-vector multiplication)
add_library(q5_k_gemv STATIC
    q5_k_gemv.hip
)

# Q6_K GEMV kernel (Q6_K × f32 matrix-vector multiplication)
add_library(q6_k_gemv STATIC
    q6_k_gemv.hip
)

target_link_libraries(q5_k_gemv
    quant_common
)

set_target_properties(q5_k_gemv PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

target_link_libraries(q6_k_gemv
    quant_common
)

set_target_properties(q6_k_gemv PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
)

# Print build info
message(STATUS "ROCm GPU Quantization Build Configuration:")
message(STATUS "  CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
message(STATUS "  CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}")
message(STATUS "  Output directory: ${CMAKE_BINARY_DIR}/lib")
